"HX-23456: implementing hystrix circuit breacker in Gateway service and Tech downgrade spring boot from 3.3.3 to 2.2.6.release"